hphp/hack/test/typecheck/attributes/memoize_lsb_variadic.php
<?hh

class Foo {
  <<__MemoizeLSB>>
  public static function bar(mixed ...$args): int {
    return 42;
  }
}
